--- a/form_talents.html
+++ b/form_talents.html
@@ -222,9 +222,9 @@
 
             </div>
 
-            <div class="photo-section-bottom">
+            <div class="">
               <h5 class="subtitle uppercase underlined">ЗАГРУЗИТЬ вашу фотографию</h5>
-              <div class="photo-section">
+              <div class="photo-section-bottom">
                 <div class="photo-block image border">
                   <p class="description">Перетащите фотографию сюда
                     <img class="arrow" src="assets/images/row.svg" alt="">
