--- a/main-filmmaker.html
+++ b/main-filmmaker.html
@@ -15,8 +15,9 @@
 
 <div class="header-box">
   <a href="#" class="link-to-home sm-logo">
+    <h5 class="header-title"><span class="bg-red">premium</span> staff</h5>
     <img class="logo-desc" src="assets/images/logo.svg" alt="">
-    <img class="logo-sm" src="assets/images/logo-sm.svg" alt="">
+    <img class="logo-sm white" src="assets/images/logo-sm.svg" alt="">
   </a>
   <header class="header sm-header">
     <ul class="navigation-menu">
@@ -24,6 +25,9 @@
       <li class="menu-item"><a href="#" class="menu-link">КАСТИНГИ</a></li>
       <li class="menu-item"><a href="#" class="menu-link">НАСТРОЙКИ</a></li>
     </ul>
+    <div class="menu-toggle">
+      <button id="nav-btn" class="btn-nav not-active" type="button"><i></i></button>
+    </div>
     <nav class="header-nav sm-nav">
       <ul class="navigation">
         <li class="menu-item"><span class="profile-ico"></span></li>
@@ -66,10 +70,13 @@
         </div>
         <div class="block">
           <div class="contacts-block">
+            <div class="link-buttons display-none">
+              <a class="button-border" href="">Редактировать фото</a>
+              <a class="button-border" href="">вакансии</a>
+            </div>
             <h3 class="title red underlined uppercase">Контакты</h3>
             <p class="description">+7 000 000 00 00</p>
-            <p class="description">ivan.ivanov@gmail.com</p>
-            <p class="description">www.ivanov.com</p>
+            <p class="description">petr.petrov@gmail.com</p>
           </div>
 
           <div class="contacts-block-info underlined">
@@ -84,7 +91,6 @@
               <a href="#" class="social-link"><span class="instagram-gray"></span></a>
             </div>
           </div>
-
 
 
           <div class="button-block">
@@ -145,7 +151,14 @@
             <a href="#" class="social-link"><span class="link-icon-gray"></span></a>
           </div>
         </div>
+        <div class="col-9">
+          <div class="moderation">
+            <h3 class="title red uppercase">Анкета ожидает модерации</h3>
+          </div>
+        </div>
+
       </div>
+
 
     </div>
   </div>
@@ -288,6 +301,9 @@
 
         <div class="row">
           <div class="col-10">
+            <p><span class="bold">Русский язык</span> <span class="rating"><img src="assets/images/rating.svg" alt=""></span></p>
+            <p><span class="bold">Казахский язык</span> <span class="rating"><img src="assets/images/rating.svg" alt=""></span></p>
+            <p><span class="bold">Английский язык</span> <span class="rating"><img src="assets/images/rating.svg" alt=""></span></p>
             <p><span class="bold">Вождение.</span> Автомобиль.</p>
             <p><span class="bold">Хобби.</span> Живопись.</p>
           </div>
@@ -368,28 +384,28 @@
 
 
         <div class="row">
-          <div class="col-6">
+          <div class="col-12 col-md-6">
             <h3 class="title-black">Любимые режиссеры</h3>
             <p style="margin-left: 25px">Стенли Кубрик, Дэвид Линч, Акира Курасава, Мартин Скарсезе</p>
           </div>
         </div>
 
         <div class="row">
-          <div class="col-6">
+          <div class="col-12 col-md-6">
             <h3 class="title-black">Любимые фильмы</h3>
             <p style="margin-left: 25px">Амели, Прибытие, Леон, Запределье</p>
           </div>
         </div>
 
         <div class="row">
-          <div class="col-6">
+          <div class="col-12 col-md-6">
             <h3 class="title-black">Любимая музыкаы</h3>
             <p style="margin-left: 25px">Queen, Hans Zimmer, David Bowie</p>
           </div>
         </div>
 
         <div class="row">
-          <div class="col-6">
+          <div class="col-12 col-md-6">
             <h3 class="title-black">Любимые художники</h3>
             <p style="margin-left: 25px">Andy Warhol, Gustav Klimt, Egon Schiele</p>
           </div>
@@ -415,7 +431,7 @@
 
 
         <div class="row">
-          <div class="col-6">
+          <div class="col-12 col-md-6">
             <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
               consequat.
               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
