--- a/main_new.html
+++ b/main_new.html
@@ -137,6 +137,8 @@
         создали единую площадку для
         коммуникации продюсерских компаний, киностаффа и актеров. Мы объединяем всю индустрию на одной площадке!
       </p>
+      <h2 class="title red uppercase">we make it real</h2>
+
     </div>
 
     <a href="#" class="button display-none">ЗАРЕГИСТРИРОВАТЬСЯ</a>
@@ -157,118 +159,6 @@
   </div>
 </div>
 
-<div class="container">
-  <div class="about-us-box" id="about-us">
-    <div class="row">
-      <div class="col-md-6">
-        <div class="about-us-head">
-          <h3 class="title underlined uppercase">Президент eurasia talents</h3>
-        </div>
-
-
-        <p class="text uppercase"> Гульнара Сарсенова – бизнес-леди с большим опытом и романтик с большим
-          сердцем. А это
-          именно те качества, с которыми покоряют кинематограф.
-        </p>
-
-        <p class="text uppercase"> Успех пришел к ней в 2004 году. Помните нашумевший фильм "Монгол" режиссера
-          Сергея
-          Бодрова-старшего? Гульнара Сарсенова выступила продюсером картины. Это был первый в истории
-          Казахстана фильм, номинированный на премию "Оскар" в категории "Лучший фильм на иностранном языке".
-        </p>
-
-        <p class="text uppercase"> Затем она спродюсировала еще 10 фильмов, и один из последних на данный момент
-          – "Айка"
-          – победил в номинации "Лучшая женская роль" на 71-ом Каннском кинофестивале в 2018 году. Это событие
-          вошло в историю мирового кинематографа!
-        </p>
-
-        <div class="about-seo">
-          <p class="text uppercase">Сегодня Гульнара Сарсенова – мастодонт киноиндустрии и уважаемый
-            продюсер.В 2008 году жюри Международного кинофестиваля в Пусане признали ее «Лучшим
-            кинематографистом
-            Азии».</p>
-
-          <p class="text uppercase red">В чем секрет успеха?</p>
-
-          <p class="text">Гульнара Сарсенова всегда делает упор на качество своих картин. Сильные сценарии,
-            лучшие профессионалы в съемочной команде и тщательный подбор актеров – вот, за что нас выбирает
-            не только казахстанская, но и международная аудитория.
-          </p>
-
-          <p class="text uppercase red">Наша команда</p>
-        </div>
-
-        <div class="gifts">
-          <span class="gift" style="background-image: url('assets/images/oscar.png')"></span>
-          <span class="gift" style="background-image: url('assets/images/palm-img.png')"></span>
-          <span class="gift" style="background-image: url('assets/images/petuh-img.png')"></span>
-          <span class="gift" style="background-image: url('assets/images/hz-img.png')"></span>
-        </div>
-      </div>
-
-      <div class="col-md-6">
-        <div class="director-box">
-          <img class="ceo" src="assets/images/ceo.jpg" alt="">
-
-          <div class="d-footer">
-            <div class="ceo-name-box">
-              <h3 class="ceo-name white">Гульнара Булатовна САРСЕНОВА</h3>
-            </div>
-
-            <div class="ceo-job-title">
-              <h3 class="position white">Основатель EURASIA FILM PRODUCTION</h3>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="container">
-  <div class="advantages-box display-none">
-    <div class="advantages-head">
-      <h3 class="title underlined">ПРЕИМУЩЕСТВА</h3>
-    </div>
-
-    <div class="min-height">
-      <div class="advantages-body">
-        <ul class="advantages-list">
-          <li>
-            <p class="text uppercase">Создана на базе международного кино-продакшна </p>
-          </li>
-
-          <li>
-            <p class="text uppercase"> В котором работают только профессионалы кинематографа с большим
-              опытом и всеми признанной репутацией</p>
-          </li>
-          <li>
-            <p class="text uppercase">Прозрачная коммуникация всех со всеми без границ, барьеров или
-              агентских
-              комиссий</p>
-          </li>
-          <li>
-            <p class="text uppercase">Новейшее программное обеспечение, которое ускорит вашу работу в
-              несколько раз
-            </p>
-          </li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="shadow-layer second">
-      <h2 class="title red uppercase">we make it real</h2>
-      <div class="shadow-layer-films">
-        <a href="#" class="shadow-film" data-background-color="999a9e"><img
-          src="assets/images/electric-layer.png"
-          alt="" class="shadow-film-image"></a>
-        <a href="#" class="shadow-film" data-background-color="C9B2A3">
-          <img src="assets/images/star-layer.png" alt="" class="shadow-film-image"></a>
-      </div>
-    </div>
-  </div>
-</div>
 
 <div class="container">
   <div class="our-community-box" id="community">
@@ -283,8 +173,7 @@
     </div>
 
     <div class="animation-box">
-      <img class="inimation-img will-be-desc" src="assets/images/will-be-gif.png" alt="">
-      <img class="inimation-img will-be-sm" src="assets/images/will-be-gif-sm.png" alt="">
+      <img class="inimation-img" src="assets/images/will-be-gif.png" alt="">
     </div>
 
 
@@ -428,6 +317,108 @@
 
 
 <div class="container">
+  <div class="locations-box" id="locations">
+    <h3 class="big-title underlined"><span class="uppercase">локации</span> для съемок в Казахстане</h3>
+
+    <div class="loc-controls">
+      <span class="prev-loc"></span>
+      <span class="next-loc"></span>
+    </div>
+
+    <div class="locations">
+      <div class="location">
+        <img class="img-block" src="assets/images/charyn.jpg" alt="">
+        <div class="location-body">
+          <div class="row">
+            <div class="col-12 col-lg-7 m-order-1 d-order-0">
+              <div class="loc-left">
+                <p class="text uppercase">
+                  Степи, леса, пустыни, горы, озера, каньоны – и все это в одной стране!
+                </p>
+                <p class="text">
+                  Казахстан – это кладезь живописных, не открытых миру локаций для съемок. Страна
+                  расположена в 4
+                  климатических зонах, что дает вам возможность провести съемки на фоне разных
+                  пейзажей, не пересекая
+                  границ!
+                </p>
+              </div>
+            </div>
+            <div class="col-12 col-lg-5 m-order-0 d-order-1">
+              <div class="loc-right">
+                <div class="place-name">
+                  <p class="text">Каньон Чарын</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="location">
+        <img class="img-block" src="assets/images/charyn.jpg" alt="">
+        <div class="location-body">
+          <div class="row">
+            <div class="col-12 col-lg-7 m-order-1 d-order-0">
+              <div class="loc-left">
+                <p class="text uppercase">
+                  Степи, леса, пустыни, горы, озера, каньоны – и все это в одной стране!
+                </p>
+                <p class="text">
+                  Казахстан – это кладезь живописных, не открытых миру локаций для съемок. Страна
+                  расположена в 4
+                  климатических зонах, что дает вам возможность провести съемки на фоне разных
+                  пейзажей, не пересекая
+                  границ!
+                </p>
+              </div>
+            </div>
+            <div class="col-12 col-lg-5 m-order-0 d-order-1">
+              <div class="loc-right">
+                <div class="place-name">
+                  <p class="text">Каньон Чарын</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="location">
+        <img class="img-block" src="assets/images/charyn.jpg" alt="">
+        <div class="location-body">
+          <div class="row">
+            <div class="col-12 col-lg-7 m-order-1 d-order-0">
+              <div class="loc-left">
+                <p class="text uppercase">
+                  Степи, леса, пустыни, горы, озера, каньоны – и все это в одной стране!
+                </p>
+                <p class="text">
+                  Казахстан – это кладезь живописных, не открытых миру локаций для съемок. Страна
+                  расположена в 4
+                  климатических зонах, что дает вам возможность провести съемки на фоне разных
+                  пейзажей, не пересекая
+                  границ!
+                </p>
+              </div>
+            </div>
+            <div class="col-12 col-lg-5 m-order-0 d-order-1">
+              <div class="loc-right">
+                <div class="place-name">
+                  <p class="text">Каньон Чарын</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+
+<div class="container">
   <div class="auditory-box" id="auditory">
     <div class="auditory-head">
       <h3 class="big-title underlined">НАША АУДИТОРИЯ</h3>
@@ -442,8 +433,8 @@
             </div>
 
             <div class="cart-info">
-              <h3 class="title small red">ТАЛАНТов</h3>
-
+              <h3 class="title small red uppercase">ТАЛАНТов</h3>
+              <span class="amount stars">25000</span>
               <div class="cart-description">
                 <p class="white">актер, певец, танцор, акробат, модель, каскадер</p>
               </div>
@@ -462,7 +453,9 @@
             </div>
 
             <div class="cart-info">
-              <h3 class="title small red">КИНОДЕЯТЕЛей</h3>
+              <h3 class="title small red uppercase">КИНОДЕЯТЕЛей</h3>
+              <span class="amount film-makers">50000</span>
+
 
               <div class="cart-description">
                 <p class="white">режиссер, оператор, композитор, сценарист, художник, гример, костюмер,
@@ -482,8 +475,8 @@
             </div>
 
             <div class="cart-info">
-              <h3 class="title small red">КОМПАНИй</h3>
-
+              <h3 class="title small red uppercase">КОМПАНИй</h3>
+              <span class="amount companies">35000</span>
               <div class="cart-description">
                 <p class="white">кинокомпания, продакшн, ивент агенство, маркетинговое агентство,
                   рекламное
@@ -703,106 +696,7 @@
 </div>
 
 
-<div class="container">
-  <div class="locations-box" id="locations">
-    <h3 class="big-title underlined"><span class="uppercase">локации</span> для съемок в Казахстане</h3>
 
-    <div class="loc-controls">
-      <span class="prev-loc"></span>
-      <span class="next-loc"></span>
-    </div>
-
-    <div class="locations">
-      <div class="location">
-        <img class="img-block" src="assets/images/charyn.jpg" alt="">
-        <div class="location-body">
-          <div class="row">
-            <div class="col-12 col-md-7 m-order-1 d-order-0">
-              <div class="loc-left">
-                <p class="text uppercase">
-                  Степи, леса, пустыни, горы, озера, каньоны – и все это в одной стране!
-                </p>
-                <p class="text">
-                  Казахстан – это кладезь живописных, не открытых миру локаций для съемок. Страна
-                  расположена в 4
-                  климатических зонах, что дает вам возможность провести съемки на фоне разных
-                  пейзажей, не пересекая
-                  границ!
-                </p>
-              </div>
-            </div>
-            <div class="col-5 m-order-0 d-order-1">
-              <div class="loc-right">
-                <div class="place-name">
-                  <p class="text">Каньон Чарын</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="location">
-        <img class="img-block" src="assets/images/charyn.jpg" alt="">
-        <div class="location-body">
-          <div class="row">
-            <div class="col-12 col-md-7 m-order-1 d-order-0">
-              <div class="loc-left">
-                <p class="text uppercase">
-                  Степи, леса, пустыни, горы, озера, каньоны – и все это в одной стране!
-                </p>
-                <p class="text">
-                  Казахстан – это кладезь живописных, не открытых миру локаций для съемок. Страна
-                  расположена в 4
-                  климатических зонах, что дает вам возможность провести съемки на фоне разных
-                  пейзажей, не пересекая
-                  границ!
-                </p>
-              </div>
-            </div>
-            <div class="col-5 m-order-0 d-order-1">
-              <div class="loc-right">
-                <div class="place-name">
-                  <p class="text">Каньон Чарын</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="location">
-        <img class="img-block" src="assets/images/charyn.jpg" alt="">
-        <div class="location-body">
-          <div class="row">
-            <div class="col-12 col-md-7 m-order-1 d-order-0">
-              <div class="loc-left">
-                <p class="text uppercase">
-                  Степи, леса, пустыни, горы, озера, каньоны – и все это в одной стране!
-                </p>
-                <p class="text">
-                  Казахстан – это кладезь живописных, не открытых миру локаций для съемок. Страна
-                  расположена в 4
-                  климатических зонах, что дает вам возможность провести съемки на фоне разных
-                  пейзажей, не пересекая
-                  границ!
-                </p>
-              </div>
-            </div>
-            <div class="col-5 m-order-0 d-order-1">
-              <div class="loc-right">
-                <div class="place-name">
-                  <p class="text">Каньон Чарын</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </div>
-</div>
 
 <div class="container">
   <div class="partners-box" id="partners">
