--- a/form-company.html
+++ b/form-company.html
@@ -632,9 +632,9 @@
           <div class="body-block">
 
 
-            <div class="photo-section-bottom">
+            <div class="">
               <h5 class="subtitle uppercase underlined">ЗАГРУЗИТе логотип вашей компании</h5>
-              <div class="photo-section">
+              <div class="photo-section-bottom">
                 <div class="photo-block image border">
                   <p class="description">Загрузите логотип сюда
                     <img class="arrow" src="assets/images/row.svg" alt="">
