--- a/form-filmmaker.html
+++ b/form-filmmaker.html
@@ -229,9 +229,9 @@
 
             </div>
 
-            <div class="photo-section-bottom">
+            <div class="">
               <h5 class="subtitle uppercase underlined">ЗАГРУЗИТЬ вашу фотографию</h5>
-              <div class="photo-section">
+              <div class="photo-section-bottom">
                 <div class="photo-block image border">
                   <p class="description-image">Перетащите фотографию сюда
                     <img class="arrow" src="assets/images/row.svg" alt="">
